Fix code width on mobile

--- a/frontend/src/styles/components/_CodeBlock.scss
+++ b/frontend/src/styles/components/_CodeBlock.scss
@@ -34,3 +34,11 @@
 .code-editor {
   z-index: -1;
 }
+
+@media (max-width: 600px) {
+  .code-block-wrapper {
+    .CodeMirror {
+      max-width: unset;
+    }
+  }
+}
